--- a/src/sys-user/myprofile-page/userProfile.css
+++ b/src/sys-user/myprofile-page/userProfile.css
@@ -278,6 +278,7 @@ main .container .post-cont .form-cont textarea {
   border-radius: 10px;
   resize: none;
   padding: 10px;
+  width: 660px;
   border: 1px solid #a8896c;
   box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
 }
