--- a/src/sys-user/myprofile-page/userProfile.scss
+++ b/src/sys-user/myprofile-page/userProfile.scss
@@ -74,6 +74,7 @@ main {
                     border-radius: 10px;
                     resize: none;
                     padding: 10px;
+                    width: 660px;
                     border: 1px solid $header-color;
                     box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
 
