--- a/src/sys-admin/feed-profile-page/adminProfile.scss
+++ b/src/sys-admin/feed-profile-page/adminProfile.scss
@@ -3,13 +3,13 @@
 
 main {
     width: 100%;
-    height: 90vh;
+    height: 86vh;
     @include flexBox();
     justify-content: center;
 
     .container {
         width: 1120px;
-        height: 90vh;
+        height: 86vh;
         @include flexBox();
 
         .message-pop {
@@ -21,7 +21,7 @@ main {
 
         .post-cont {
             width: 740px;
-            height: 90vh;
+            height: 86vh;
 
             .category {
 
@@ -65,12 +65,13 @@ main {
 
             .user-post-cont {
                 overflow-y: scroll;
-                height: 80vh;
+                height: 70vh;
                 width: 710px;
                 margin-top: 12px;
+                @include scroll();
 
                 .user-post {
-                    width: 690px;
+                    width: 686px;
                     background-color: $divider-color;
                     border-radius: 10px;
                     margin-bottom: 10px;
@@ -144,6 +145,7 @@ main {
                             margin: 10px 0 10px 10px;
                             border: none;
                             background-color: $divider-color;
+                            transition: 0.3s;
     
                             &:hover {
                                 opacity: 80%;
@@ -157,7 +159,7 @@ main {
 
         .shopinfo-cont {
             width: 380px;
-            height: 90vh;
+            height: 86vh;
 
             .search-bar {
                 input[type=text] {
@@ -184,6 +186,7 @@ main {
                     color: $white-color;
                     background-color: $header-color;
                     cursor: pointer;
+                    transition: 0.3s;
                     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
 
                     &:hover {
@@ -197,6 +200,8 @@ main {
                 height: 83vh;
                 margin-top: 10px;
                 color: $header-color;
+                overflow-y: scroll;
+                @include scroll();
                 background-color: $divider-color;
                 box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
 
@@ -217,11 +222,17 @@ main {
 
                 h3 {
                     margin: 10px 0 0 10px;
+                    font-size: .9rem;
                 }
 
                 p {
                     margin-left: 30px;
                     font-size: .8rem;
+                }
+
+                .info-line {
+                    border-bottom: 1px solid $white-color;
+                    margin-top: 20px;
                 }
 
                 button {
@@ -234,6 +245,7 @@ main {
                     background-color: $header-color;
                     border: none;
                     border-radius: 5px;
+                    transition: 0.3s;
 
                     &:hover {
                         opacity: 80%;
