--- a/src/sys-admin/message-page/adminMessage.css
+++ b/src/sys-admin/message-page/adminMessage.css
@@ -212,20 +212,20 @@ header nav .dropdown:hover .dropbtn {
 
 main {
   width: 100%;
-  height: 90vh;
+  height: 86vh;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 main .container {
   width: 1120px;
-  height: 90vh;
+  height: 86vh;
   display: flex;
   align-items: center;
 }
 main .container .message-cont {
   width: 740px;
-  height: 90vh;
+  height: 86vh;
 }
 main .container .message-cont .message-head {
   margin-top: 12px;
@@ -282,11 +282,31 @@ main .container .message-cont .message-head .refresh-btn .your_div {
 }
 main .container .message-cont .message-box {
   overflow-y: scroll;
-  height: 68vh;
+  height: 63vh;
   width: 710px;
   border-left: 3px solid #f2e5db;
   border-right: 3px solid #f2e5db;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
+}
+main .container .message-cont .message-box::-webkit-scrollbar {
+  display: block;
+  width: 5px;
+}
+main .container .message-cont .message-box::-webkit-scrollbar-track {
+  background: transparent;
+}
+main .container .message-cont .message-box::-webkit-scrollbar-thumb {
+  background-color: #a8896c;
+  border-right: none;
+  border-left: none;
+}
+main .container .message-cont .message-box::-webkit-scrollbar-track-piece:end {
+  background: transparent;
+  margin-bottom: 10px;
+}
+main .container .message-cont .message-box::-webkit-scrollbar-track-piece:start {
+  background: transparent;
+  margin-top: 10px;
 }
 main .container .message-cont .message-box .time-s {
   text-align: center;
@@ -375,7 +395,7 @@ main .container .message-cont .message-input form button:hover {
 }
 main .container .progress-cont {
   width: 380px;
-  height: 90vh;
+  height: 86vh;
 }
 main .container .progress-cont .progress {
   margin-top: 10px;
@@ -722,7 +742,7 @@ main .container .sml-cont .content-cont .progress-parent .prog-child .progress-t
 }
 main .container .sml-cont .content-cont .print-canvas {
   width: 400px;
-  height: 490px;
+  height: 486px;
   background-color: #ffffff;
   margin: auto;
   margin-top: 20px;
@@ -763,7 +783,7 @@ main .container .sml-cont .content-cont .print-canvas .details .details-set .who
 }
 main .container .sml-cont .content-cont .print-canvas .details .details-set .prod-display {
   display: flex;
-  width: 390px;
+  width: 386px;
   margin-left: 5px;
   margin-top: 40px;
   border: 1px solid #a8896c;
