--- a/src/sys-admin/message-page/adminMessage.scss
+++ b/src/sys-admin/message-page/adminMessage.scss
@@ -3,18 +3,18 @@
 
 main {
     width: 100%;
-    height: 90vh;
+    height: 86vh;
     @include flexBox();
     justify-content: center;
 
     .container {
         width: 1120px;
-        height: 90vh;
+        height: 86vh;
         @include flexBox();
 
         .message-cont {
             width: 740px;
-            height: 90vh;
+            height: 86vh;
 
             .message-head {
                 margin-top: 12px;
@@ -81,7 +81,8 @@ main {
 
             .message-box {
                 overflow-y: scroll;
-                height: 68vh;
+                @include scroll();
+                height: 63vh;
                 width: 710px;
                 border-left: 3px solid $divider-color;  
                 border-right: 3px solid $divider-color; 
@@ -186,7 +187,7 @@ main {
 
         .progress-cont {
             width: 380px;
-            height: 90vh;
+            height: 86vh;
 
             .progress {
                 margin-top: 10px;
@@ -568,7 +569,7 @@ main {
 
                 .print-canvas {
                     width: 400px;
-                    height: 490px;
+                    height: 486px;
                     background-color: $white-color;
                     margin: auto;
                     margin-top: 20px;
@@ -617,7 +618,7 @@ main {
 
                             .prod-display {
                                 display: flex;
-                                width: 390px;
+                                width: 386px;
                                 margin-left: 5px;
                                 margin-top: 40px;
                                 border: 1px solid $header-color;
