--- a/src/sys-admin/product-page/adminProduct.css
+++ b/src/sys-admin/product-page/adminProduct.css
@@ -212,20 +212,20 @@ header nav .dropdown:hover .dropbtn {
 
 main {
   width: 100%;
-  height: 90vh;
+  height: 86vh;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 main .container {
   width: 1120px;
-  height: 90vh;
+  height: 86vh;
   display: flex;
   align-items: center;
 }
 main .container .product-cont {
   width: 740px;
-  height: 90vh;
+  height: 86vh;
 }
 main .container .product-cont .create-message {
   font-size: 20px;
@@ -376,12 +376,32 @@ main .container .product-cont .category .active {
 }
 main .container .product-cont .product {
   overflow-y: scroll;
-  height: 50vh;
+  height: 44vh;
   width: 710px;
   margin-top: 12px;
 }
+main .container .product-cont .product::-webkit-scrollbar {
+  display: block;
+  width: 5px;
+}
+main .container .product-cont .product::-webkit-scrollbar-track {
+  background: transparent;
+}
+main .container .product-cont .product::-webkit-scrollbar-thumb {
+  background-color: #a8896c;
+  border-right: none;
+  border-left: none;
+}
+main .container .product-cont .product::-webkit-scrollbar-track-piece:end {
+  background: transparent;
+  margin-bottom: 10px;
+}
+main .container .product-cont .product::-webkit-scrollbar-track-piece:start {
+  background: transparent;
+  margin-top: 10px;
+}
 main .container .product-cont .product .display-div {
-  width: 690px;
+  width: 686px;
   display: flex;
   flex-wrap: wrap;
 }
@@ -426,7 +446,7 @@ main .container .product-cont .product .display-div .prod-display p {
 }
 main .container .inbox-cont {
   width: 380px;
-  height: 90vh;
+  height: 86vh;
 }
 main .container .inbox-cont .search-bar input[type=text] {
   width: 76%;
@@ -458,7 +478,7 @@ main .container .inbox-cont .search-bar button:hover {
 }
 main .container .inbox-cont .inbox {
   width: 380px;
-  height: 83vh;
+  height: 80vh;
   color: #a8896c;
   background-color: #f2e5db;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
@@ -478,11 +498,31 @@ main .container .inbox-cont .inbox .inbox-header h2, main .container .inbox-cont
 main .container .inbox-cont .inbox .inbox-message-cont {
   overflow-y: scroll;
   width: 380px;
-  height: 75vh;
+  height: 70vh;
   display: flex;
   align-items: center;
   flex-direction: column;
   cursor: pointer;
+}
+main .container .inbox-cont .inbox .inbox-message-cont::-webkit-scrollbar {
+  display: block;
+  width: 5px;
+}
+main .container .inbox-cont .inbox .inbox-message-cont::-webkit-scrollbar-track {
+  background: transparent;
+}
+main .container .inbox-cont .inbox .inbox-message-cont::-webkit-scrollbar-thumb {
+  background-color: #a8896c;
+  border-right: none;
+  border-left: none;
+}
+main .container .inbox-cont .inbox .inbox-message-cont::-webkit-scrollbar-track-piece:end {
+  background: transparent;
+  margin-bottom: 10px;
+}
+main .container .inbox-cont .inbox .inbox-message-cont::-webkit-scrollbar-track-piece:start {
+  background: transparent;
+  margin-top: 10px;
 }
 main .container .inbox-cont .inbox .inbox-message-cont .inbox-message {
   width: 350px;
@@ -504,7 +544,7 @@ main .container .inbox-cont .inbox .inbox-message-cont .inbox-message img {
   margin: 10px;
 }
 main .container .inbox-cont .inbox .inbox-message-cont .inbox-message .name-addr {
-  width: 190px;
+  width: 186px;
 }
 main .container .inbox-cont .inbox .inbox-message-cont .inbox-message .name-addr p {
   font-size: 0.7rem;
