--- a/src/sys-admin/product-page/adminProduct.scss
+++ b/src/sys-admin/product-page/adminProduct.scss
@@ -3,18 +3,18 @@
 
 main {
     width: 100%;
-    height: 90vh;
+    height: 86vh;
     @include flexBox();
     justify-content: center;
 
     .container {
         width: 1120px;
-        height: 90vh;
+        height: 86vh;
         @include flexBox();
 
         .product-cont {
             width: 740px;
-            height: 90vh;
+            height: 86vh;
 
             .create-message {
                 font-size: 20px;
@@ -190,12 +190,13 @@ main {
 
             .product {
                 overflow-y: scroll;
-                height: 50vh;
+                @include scroll();
+                height: 44vh;
                 width: 710px;
                 margin-top: 12px;
                 
                 .display-div {
-                    width: 690px;
+                    width: 686px;
                     display: flex;
                     flex-wrap: wrap;
 
@@ -247,7 +248,7 @@ main {
 
         .inbox-cont {
             width: 380px;
-            height: 90vh;
+            height: 86vh;
 
             .search-bar {
                 input[type=text] {
@@ -285,7 +286,7 @@ main {
 
             .inbox {
                 width: 380px;
-                height: 83vh;
+                height: 80vh;
                 color: $header-color;
                 background-color: $divider-color;
                 box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
@@ -306,8 +307,9 @@ main {
                 .inbox-message-cont {
                     overflow-y: scroll;
                     width: 380px;
-                    height: 75vh;
+                    height: 70vh;
                     @include flexBox();
+                    @include scroll();
                     flex-direction: column;
                     cursor: pointer;
                     
@@ -332,7 +334,7 @@ main {
                         }
 
                         .name-addr {
-                            width: 190px;
+                            width: 186px;
                             p {
                                 font-size: .7rem;
                             }
