--- a/src/sys-user/gcash-payment/gcash.css
+++ b/src/sys-user/gcash-payment/gcash.css
@@ -216,21 +216,21 @@ header nav {
 
 main {
   width: 100%;
-  height: 90vh;
+  height: 86vh;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 main .container {
   width: 1120px;
-  height: 90vh;
+  height: 86vh;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 main .container .product-cont {
   width: 430px;
-  height: 90vh;
+  height: 86vh;
 }
 main .container .product-cont .prod-back {
   margin-top: 10px;
@@ -253,4 +253,24 @@ main .container .product-cont .product {
   background-color: #f2e5db;
   overflow-y: scroll;
   box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+}
+main .container .product-cont .product::-webkit-scrollbar {
+  display: block;
+  width: 5px;
+}
+main .container .product-cont .product::-webkit-scrollbar-track {
+  background: transparent;
+}
+main .container .product-cont .product::-webkit-scrollbar-thumb {
+  background-color: #a8896c;
+  border-right: none;
+  border-left: none;
+}
+main .container .product-cont .product::-webkit-scrollbar-track-piece:end {
+  background: transparent;
+  margin-bottom: 10px;
+}
+main .container .product-cont .product::-webkit-scrollbar-track-piece:start {
+  background: transparent;
+  margin-top: 10px;
 }/*# sourceMappingURL=gcash.css.map */
