--- a/src/sys-user/gcash-payment/gcash.scss
+++ b/src/sys-user/gcash-payment/gcash.scss
@@ -9,19 +9,19 @@ header {
 
 main {
     width: 100%;
-    height: 90vh;
+    height: 86vh;
     @include flexBox();
     justify-content: center;
 
     .container {
         width: 1120px;
-        height: 90vh;
+        height: 86vh;
         @include flexBox();
         justify-content: center;
 
         .product-cont {
             width: 430px;
-            height: 90vh;
+            height: 86vh;
 
             .prod-back {
                 margin-top: 10px;
@@ -45,6 +45,7 @@ main {
                 margin-top: 12px;
                 background-color: $divider-color;
                 overflow-y: scroll;
+                @include scroll();
                 box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
                 
             }
