--- a/src/sys-user/home-page/userhome.css
+++ b/src/sys-user/home-page/userhome.css
@@ -212,20 +212,20 @@ header nav .dropdown:hover .dropbtn {
 
 main {
   width: 100%;
-  height: 90vh;
+  height: 80vh;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 main .container {
   width: 1120px;
-  height: 90vh;
+  height: 80vh;
   display: flex;
   align-items: center;
 }
 main .container .product-cont {
   width: 740px;
-  height: 90vh;
+  height: 80vh;
 }
 main .container .product-cont .category button {
   font-family: "Poppins", sans-serif;
@@ -252,6 +252,26 @@ main .container .product-cont .product {
   height: 78vh;
   width: 710px;
   margin-top: 12px;
+}
+main .container .product-cont .product::-webkit-scrollbar {
+  display: block;
+  width: 5px;
+}
+main .container .product-cont .product::-webkit-scrollbar-track {
+  background: transparent;
+}
+main .container .product-cont .product::-webkit-scrollbar-thumb {
+  background-color: #a8896c;
+  border-right: none;
+  border-left: none;
+}
+main .container .product-cont .product::-webkit-scrollbar-track-piece:end {
+  background: transparent;
+  margin-bottom: 10px;
+}
+main .container .product-cont .product::-webkit-scrollbar-track-piece:start {
+  background: transparent;
+  margin-top: 10px;
 }
 main .container .product-cont .product .display-div {
   width: 690px;
@@ -300,7 +320,7 @@ main .container .product-cont .product .display-div .prod-display p {
 }
 main .container .shopinfo-cont {
   width: 380px;
-  height: 90vh;
+  height: 80vh;
 }
 main .container .shopinfo-cont .search-bar input[type=text] {
   width: 76%;
@@ -358,6 +378,7 @@ main .container .shopinfo-cont .shopinfo h1 {
 main .container .shopinfo-cont .shopinfo h3 {
   margin: 10px 0 0 10px;
   font-weight: 600;
+  font-size: 0.9rem;
 }
 main .container .shopinfo-cont .shopinfo a {
   color: #a8896c;
@@ -368,4 +389,8 @@ main .container .shopinfo-cont .shopinfo a:hover {
 main .container .shopinfo-cont .shopinfo p {
   margin-left: 30px;
   font-size: 0.8rem;
+}
+main .container .shopinfo-cont .shopinfo .info-line {
+  border-bottom: 1px solid #ffffff;
+  margin-top: 20px;
 }/*# sourceMappingURL=userhome.css.map */
