--- a/src/sys-user/home-page/userhome.scss
+++ b/src/sys-user/home-page/userhome.scss
@@ -3,18 +3,18 @@
 
 main {
     width: 100%;
-    height: 90vh;
+    height: 80vh;
     @include flexBox();
     justify-content: center;
 
     .container {
         width: 1120px;
-        height: 90vh;
+        height: 80vh;
         @include flexBox();
 
         .product-cont {
             width: 740px;
-            height: 90vh;
+            height: 80vh;
 
             .category {
 
@@ -44,6 +44,7 @@ main {
 
             .product {
                 overflow-y: scroll;
+                @include scroll();
                 height: 78vh;
                 width: 710px;
                 margin-top: 12px;
@@ -103,7 +104,7 @@ main {
 
         .shopinfo-cont {
             width: 380px;
-            height: 90vh;
+            height: 80vh;
 
             .search-bar {
                 input[type=text] {
@@ -169,6 +170,7 @@ main {
                 h3 {
                     margin: 10px 0 0 10px;
                     font-weight: 600;
+                    font-size: .9rem;
                 }
 
                 a {
@@ -182,6 +184,11 @@ main {
                 p {
                     margin-left: 30px;
                     font-size: .8rem;
+                }
+
+                .info-line {
+                    border-bottom: 1px solid $white-color;
+                    margin-top: 20px;
                 }
             }
         }
