--- a/src/sys-user/message-page/userMessage.css
+++ b/src/sys-user/message-page/userMessage.css
@@ -212,20 +212,20 @@ header nav .dropdown:hover .dropbtn {
 
 main {
   width: 100%;
-  height: 90vh;
+  height: 86vh;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 main .container {
   width: 1120px;
-  height: 90vh;
+  height: 86vh;
   display: flex;
   align-items: center;
 }
 main .container .message-cont {
   width: 740px;
-  height: 90vh;
+  height: 86vh;
 }
 main .container .message-cont .message-head {
   margin-top: 12px;
@@ -277,11 +277,31 @@ main .container .message-cont .message-head .refresh-btn .your_div {
 }
 main .container .message-cont .message-box {
   overflow-y: scroll;
-  height: 67vh;
+  height: 65vh;
   width: 710px;
   border-left: 3px solid #f2e5db;
   border-right: 3px solid #f2e5db;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
+}
+main .container .message-cont .message-box::-webkit-scrollbar {
+  display: block;
+  width: 5px;
+}
+main .container .message-cont .message-box::-webkit-scrollbar-track {
+  background: transparent;
+}
+main .container .message-cont .message-box::-webkit-scrollbar-thumb {
+  background-color: #a8896c;
+  border-right: none;
+  border-left: none;
+}
+main .container .message-cont .message-box::-webkit-scrollbar-track-piece:end {
+  background: transparent;
+  margin-bottom: 10px;
+}
+main .container .message-cont .message-box::-webkit-scrollbar-track-piece:start {
+  background: transparent;
+  margin-top: 10px;
 }
 main .container .message-cont .message-box .time-s {
   text-align: center;
@@ -371,12 +391,12 @@ main .container .message-cont .message-input form button:hover {
 }
 main .container .progress-cont {
   width: 380px;
-  height: 90vh;
+  height: 86vh;
 }
 main .container .progress-cont .progress {
   margin-top: 10px;
   width: 380px;
-  height: 83vh;
+  height: 80vh;
   color: #a8896c;
   background-color: #f2e5db;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
