--- a/src/sys-user/message-page/userMessage.scss
+++ b/src/sys-user/message-page/userMessage.scss
@@ -3,18 +3,18 @@
 
 main {
     width: 100%;
-    height: 90vh;
+    height: 86vh;
     @include flexBox();
     justify-content: center;
 
     .container {
         width: 1120px;
-        height: 90vh;
+        height: 86vh;
         @include flexBox();
 
         .message-cont {
             width: 740px;
-            height: 90vh;
+            height: 86vh;
 
             .message-head {
                 margin-top: 12px;
@@ -73,7 +73,8 @@ main {
 
             .message-box {
                 overflow-y: scroll;
-                height: 67vh;
+                @include scroll();
+                height: 65vh;
                 width: 710px;
                 border-left: 3px solid $divider-color;  
                 border-right: 3px solid $divider-color; 
@@ -179,12 +180,12 @@ main {
 
         .progress-cont {
             width: 380px;
-            height: 90vh;
+            height: 86vh;
 
             .progress {
                 margin-top: 10px;
                 width: 380px;
-                height: 83vh;
+                height: 80vh;
                 color: $header-color;
                 background-color: $divider-color;
                 box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
