--- a/src/sys-user/myprofile-page/userProfile.scss
+++ b/src/sys-user/myprofile-page/userProfile.scss
@@ -3,18 +3,18 @@
 
 main {
     width: 100%;
-    height: 90vh;
+    height: 86vh;
     @include flexBox();
     justify-content: center;
 
     .container {
         width: 1120px;
-        height: 90vh;
+        height: 86vh;
         @include flexBox();
 
         .post-cont {
             width: 740px;
-            height: 90vh;
+            height: 86vh;
 
             .prod-back {
                 margin-top: 10px;
@@ -43,6 +43,7 @@ main {
                     margin-top: 10px;
                     cursor: pointer;
                     color: $header-color;
+                    transition: 0.3s;
                     box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
 
                     &:hover {
@@ -141,7 +142,8 @@ main {
 
             .user-post-cont {
                 overflow-y: scroll;
-                height: 63vh;
+                @include scroll();
+                height: 56vh;
                 width: 710px;
                 margin-top: 12px;
 
@@ -246,12 +248,12 @@ main {
 
         .shopinfo-cont {
             width: 380px;
-            height: 90vh;
+            height: 86vh;
 
             .shopinfo {
                 margin-top: 10px;
                 width: 380px;
-                height: 78vh;
+                height: 82vh;
                 color: $header-color;
                 background-color: $divider-color;
                 box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
@@ -300,6 +302,7 @@ main {
                 h3 {
                     margin: 10px 0 0 10px;
                     font-weight: 600;
+                    font-size: .9rem;
                 }
 
                 p {
@@ -322,6 +325,11 @@ main {
                             box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
                         }
                     }
+                }
+
+                .info-line {
+                    border-bottom: 1px solid $white-color;
+                    margin-top: 20px;
                 }
 
                 .edt-pass {
@@ -460,7 +468,7 @@ main {
 
         #for-edit {
             width: 1120px;
-            height: 90vh;
+            height: 86vh;
             @include flexBox();
             justify-content: center;
 
