--- a/src/sys-user/product-search/product-search.css
+++ b/src/sys-user/product-search/product-search.css
@@ -216,21 +216,21 @@ header nav {
 
 main {
   width: 100%;
-  height: 90vh;
+  height: 85vh;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 main .container {
   width: 1120px;
-  height: 90vh;
+  height: 85vh;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 main .container .product-cont {
   width: 740px;
-  height: 90vh;
+  height: 85vh;
 }
 main .container .product-cont .search-back {
   margin-top: 10px;
@@ -248,9 +248,29 @@ main .container .product-cont .search-back a {
 }
 main .container .product-cont .product {
   overflow-y: scroll;
-  height: 77vh;
+  height: 75vh;
   width: 710px;
   margin-top: 12px;
+}
+main .container .product-cont .product::-webkit-scrollbar {
+  display: block;
+  width: 5px;
+}
+main .container .product-cont .product::-webkit-scrollbar-track {
+  background: transparent;
+}
+main .container .product-cont .product::-webkit-scrollbar-thumb {
+  background-color: #a8896c;
+  border-right: none;
+  border-left: none;
+}
+main .container .product-cont .product::-webkit-scrollbar-track-piece:end {
+  background: transparent;
+  margin-bottom: 10px;
+}
+main .container .product-cont .product::-webkit-scrollbar-track-piece:start {
+  background: transparent;
+  margin-top: 10px;
 }
 main .container .product-cont .product .display-div {
   width: 690px;
