--- a/src/sys-user/product-search/product-search.scss
+++ b/src/sys-user/product-search/product-search.scss
@@ -9,19 +9,19 @@ header {
 
 main {
     width: 100%;
-    height: 90vh;
+    height: 85vh;
     @include flexBox();
     justify-content: center;
 
     .container {
         width: 1120px;
-        height: 90vh;
+        height: 85vh;
         @include flexBox();
         justify-content: center;
 
         .product-cont {
             width: 740px;
-            height: 90vh;
+            height: 85vh;
 
             .search-back {
                 margin-top: 10px;
@@ -41,7 +41,8 @@ main {
 
             .product {
                 overflow-y: scroll;
-                height: 77vh;
+                @include scroll();
+                height: 75vh;
                 width: 710px;
                 margin-top: 12px;
                 
