--- a/src/style/header/_header.scss
+++ b/src/style/header/_header.scss
@@ -119,6 +119,10 @@ header {
             padding-bottom: 5px;
         }
     }
+
+    .nav-phone {
+        display: block;
+    }
 }
 
 //divider
@@ -137,3 +141,9 @@ header {
     }
 
 }
+
+
+
+
+
+
