--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -10,7 +10,6 @@
     width: 100%;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    background-color: #cc5577;
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.com/svgjs' width='1440' height='560' preserveAspectRatio='none' viewBox='0 0 1440 560'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1009%26quot%3b)' fill='none'%3e%3crect width='1440' height='560' x='0' y='0' fill='rgba(255%2c 255%2c 255%2c 1)'%3e%3c/rect%3e%3cpath d='M 0%2c45 C 57.6%2c84.4 172.8%2c247.8 288%2c242 C 403.2%2c236.2 460.8%2c31.8 576%2c16 C 691.2%2c0.2 748.8%2c150.6 864%2c163 C 979.2%2c175.4 1036.8%2c76.8 1152%2c78 C 1267.2%2c79.2 1382.4%2c150.8 1440%2c169L1440 560L0 560z' fill='rgba(255%2c 255%2c 255%2c 1)'%3e%3c/path%3e%3cpath d='M 0%2c365 C 96%2c383 288%2c456.8 480%2c455 C 672%2c453.2 768%2c352.4 960%2c356 C 1152%2c359.6 1344%2c449.6 1440%2c473L1440 560L0 560z' fill='rgba(219%2c 176%2c 123%2c 1)'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1009'%3e%3crect width='1440' height='560' fill='white'%3e%3c/rect%3e%3c/mask%3e%3c/defs%3e%3c/svg%3e");
     background-attachment: fixed;
     background-size: cover;
@@ -36,7 +35,7 @@
 
         button {
             padding: 15px 20px 15px 20px;
-            border-radius: 20px;
+            border-radius: 10px;
             border: none;
             background-color: $header-color;
             font-size: $nav-size;
@@ -81,63 +80,49 @@
         }
 
         .prod-cont-parent {
-            width: 100%;
-            height: 70vh;
-            @include flexBox();
-            justify-content: space-evenly;
+            width: 900px;
+            height: 80vh;
+            display: flex;
+            flex-wrap: wrap;
+            overflow-y: scroll;
+            @include scroll();
+            background-color: $white-color;
+            box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px, rgb(209, 213, 219) 0px 0px 0px 1px inset;
 
-            button {
-                position: absolute;
-                right: 150px;
-                width: 50px;
-                height: 50px;
-                border-radius: 50%;
-                border: none;
-                cursor: pointer;
-                z-index: 1;
-                box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-
-                img {
-                    width: 55px;
-                    height: 55px;
-                }
+            .prod-content {
+                width: 212px;
+                height: 300px;
+                color: $header-color;
+                background-color: $divider-color;
+                margin: 5px;
+                text-align: center;
+                box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px, rgb(209, 213, 219) 0px 0px 0px 1px inset;
 
                 &:hover {
-                    opacity: 80%;
-                    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+                    box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
                 }
-            }
 
-            .prod-child {
-                width: 90%;
-                height: 90%;
-                @include flexBox();
-                justify-content: space-evenly;
-
-                .prod-content {
+                .img {
+                    width: 187px;
+                    height: 200px;
+                    background-color: $white-color;
+                    margin: auto;
+                    margin-top: 10px;
                     @include flexBox();
                     justify-content: center;
-                    flex-direction: column;
-                    color: $header-color;
-                    height: 88%;
-                    width: 29.5%;
-                    background-color: $divider-color;
-                    border-radius: 25px;
-                    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+
+                    img {
+                        width: 100%;
+                    }
+                }
+
+                .pname {
+                    margin: 10px 10px 0 10px;
+                    overflow: hidden;
                     
-                    .prod-img {
-                        width: 90%;
-                        height: 55%;
-                        background-color: $white-color;
-                        border-radius: 20px;
-                        box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+                    h3 {
+                        white-space: nowrap;
                     }
-
-                    h2 {
-                        margin: 20px;
-                        font-weight: 800;
-                    }
-
                 }
             }
         }
@@ -145,7 +130,7 @@
 }
 
 //Design for contact page
-#contact {
+/*#contact {
     @include screen-size();
     @include flexBox();
 
@@ -240,7 +225,7 @@
         }
     }
 
-    .contact-form {
+    /*.contact-form {
         width: 50%;
         height: 100vh;
         @include flexBox();
@@ -342,7 +327,7 @@
             }
         }
     }
-}
+}*/
 
 
 
@@ -352,30 +337,299 @@
 @include extra-small {
     //header
     header {
-        height: 6vh;
+        height: 50px;
 
         .app-name {
             a {
                 margin-left: 20px;
-                h1 {
-                    display: none;
+                
+                img {
+                    width: 20px;
+                    height: 20px;
                 }
+
+                h1 {
+                    font-size: .9rem;
+                }
+            }
+        }
+
+        nav {
+            .a {
+                margin-right: 20px;
+                font-size: .7rem;
+
             }
         }
     }
 
-    //landing page
-    #landing-page {
-        height: 92vh;
+    .divider {
+         p {
+            margin-left: 20px;
+            font-size: .4rem;
+         }
+    }
+
+    main {
+        //landing page
+        #landing-page {
+            height: 100vh;
+            text-align: center;
+
+            .landing-text {
+                @include flexBox();
+                width: auto;
+                height: 100px;
+                justify-content: center;
+
+                h1 {
+                    font-size: 2rem;
+                }
+
+                p {
+                    font-size: .8rem;
+                    line-height: 1.5;
+                    margin: 10px 10px;
+
+                }
+
+                button {
+                    padding: 10px 10px;
+                    width: 100px;
+                    border-radius: 10px;
+                    border: none;
+                    background-color: $header-color;
+                    font-size: .8rem;
+                    color: $white-color;
+                    cursor: pointer;
+                    margin-top: 20px;
+            
+                    &:hover {
+                        opacity: 75%;
+                    }
+                }
+            }
+
+            .image-slide {
+                img {
+                    width: 13rem;
+                    height: 13rem;
+                    margin-top: -120px;
+                    border-radius: 0 10px 0 10px;
+                }
+            }
+        }
+        //product list
+        #product-list {
+            .product-cont {
+                h1 {
+                    font-size: 2rem;
+                }
+
+                .prod-cont-parent {
+                    width: 90%;
+                    height: 80vh;
+
+                    .prod-content {
+                        width: 96%;
+                        height: 97%;
+
+                        .img {
+                            width: 250px;
+                            height: 320px;
+                        }
+                    }
+                }
+            }
+        }
     }
 }
 
 @include sm-only {
-    
+    //header
+    header {
+        height: 50px;
+
+        .app-name {
+            a {
+                margin-left: 20px;
+                
+                img {
+                    width: 20px;
+                    height: 20px;
+                }
+
+                h1 {
+                    font-size: .9rem;
+                }
+            }
+        }
+
+        nav {
+            .a {
+                margin-right: 20px;
+                font-size: .7rem;
+
+            }
+        }
+    }
+
+    .divider {
+         p {
+            margin-left: 20px;
+            font-size: .4rem;
+         }
+    }
+
+    main {
+        //landing page
+        #landing-page {
+            height: 100vh;
+            text-align: center;
+
+            .landing-text {
+                @include flexBox();
+                width: auto;
+                height: 100px;
+                justify-content: center;
+
+                h1 {
+                    font-size: 2rem;
+                }
+
+                p {
+                    font-size: .8rem;
+                    line-height: 1.5;
+                    margin: 10px 10px;
+
+                }
+
+                button {
+                    padding: 10px 10px;
+                    width: 100px;
+                    border-radius: 10px;
+                    border: none;
+                    background-color: $header-color;
+                    font-size: .8rem;
+                    color: $white-color;
+                    cursor: pointer;
+                    margin-top: 20px;
+            
+                    &:hover {
+                        opacity: 75%;
+                    }
+                }
+            }
+
+            .image-slide {
+                img {
+                    width: 20rem;
+                    height: 20rem;
+                    margin-top: -120px;
+                    border-radius: 0 10px 0 10px;
+                }
+            }
+        }
+        //product list
+        #product-list {
+            .product-cont {
+                h1 {
+                    font-size: 2rem;
+                }
+
+                .prod-cont-parent {
+                    width: 90%;
+                    height: 80vh;
+
+                    .prod-content {
+                        width: 96%;
+                        height: 97%;
+
+                        .img {
+                            width: 400px;
+                            height: 400px;
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
 
 @include md-only {
-    
+    main {
+        //landing page
+        #landing-page {
+            height: 100vh;
+            text-align: center;
+
+            .landing-text {
+                @include flexBox();
+                width: auto;
+                height: 100px;
+                justify-content: center;
+
+                h1 {
+                    font-size: 2rem;
+                }
+
+                p {
+                    font-size: .8rem;
+                    line-height: 1.5;
+                    margin: 10px 10px;
+
+                }
+
+                button {
+                    padding: 10px 10px;
+                    width: 100px;
+                    border-radius: 10px;
+                    border: none;
+                    background-color: $header-color;
+                    font-size: .8rem;
+                    color: $white-color;
+                    cursor: pointer;
+                    margin-top: 20px;
+            
+                    &:hover {
+                        opacity: 75%;
+                    }
+                }
+            }
+
+            .image-slide {
+                img {
+                    width: 15rem;
+                    height: 15rem;
+                    margin-top: -120px;
+                    border-radius: 0 10px 0 10px;
+                }
+            }
+        }
+        //product list
+        #product-list {
+            .product-cont {
+                h1 {
+                    font-size: 2rem;
+                }
+
+                .prod-cont-parent {
+                    width: 90%;
+                    height: 80vh;
+
+                    .prod-content {
+                        width: 290px;
+                        height: 400px;
+
+                        .img {
+                            width: 250px;
+                            height: 320px;
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
 
 @include lg-only {
