--- a/src/sys-user/home-page/userhome.css
+++ b/src/sys-user/home-page/userhome.css
@@ -196,6 +196,9 @@ header nav .dropdown:hover .dropbtn {
   border-bottom: 3px solid #ffffff;
   padding-bottom: 5px;
 }
+header .nav-phone {
+  display: block;
+}
 
 .divider {
   display: flex;
